--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>YO WHAT's good can't find ur page 404 404 40404a0a404a</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
